@@ -4,6 +4,8 @@
 
   news:
     - code editor intellisense 
+    - region folding
+    - insight window
   
 ////////////////////////////////////////////////////////////////////////////////
 // v0.8 - 05-25-2008 ///////////////////////////////////////////////////////////
